Fix flip card so it works on mobile

--- a/base.css
+++ b/base.css
@@ -106,6 +106,10 @@ small {
     transform: rotateY(180deg);
 }
 
+.flip-card:active .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
 .flip-card-back,
 .flip-card-front {
     position: absolute;
